# MatrixCore

./: .gitignore  CMakeLists.txt  README.md  bytecode.h  error.cpp  error.h  main.c  main.cpp  matrix.h  node.cpp  node.h  optimizer.cpp  parser-utils.h  parser.h  parsing.c  parsing.cpp  sub_matrix.cu  sub_matrix.cuh  token.cpp  token.h  tokenize.c  tokenize.h
device/: cfc_solver.cu  cfc_solver.cuh  device_bytecode.cuh  device_constructor.cuh  device_instruction.cuh  device_matrix.cuh  device_submatrix.cuh  ising_converter.cu  ising_converter.cuh  sub_matrix.cu  sub_matrix.cuh  subqubo_merge_tree_dp.cu
parser/: bytecode.cpp  bytecode.h  error.cpp  error.h  interpreter.cpp  node.cpp  node.h  optimizer.cpp  parser-utils.cpp  parser-utils.h  parser.h  parsing.cpp  token.cpp  token.h  tokenize.cpp
solver/: adapter.h  cfc.h  cpu_adapter.cpp  gpu_adapter.cu
